# narrative-engine

./: .gitignore  AGENTS.md  CONTEXT.md  CONTEXT_template - Copy.md  README.md  ROADMAP.md  USAGE.md  final_result.json  mkdocs.yml  opencode.json  pyproject.toml  state_episodes.json  state_premise.json  state_scenes.json  state_structure.json  step_world_axes_info.md  story_output.json  story_output2.json  story_output3.json  test_scene_ep0.py
.ai/: CONTEXT.md
agents/: chapter-planner.md  character-architect.md  character-simulator.md  continuity-editor.md  copy-editor.md  critic.md  developmental-editor.md  dialogue-specialist.md  director.md  line-editor.md  outline-planner.md  proofreader.md  revision-agent.md  scene-writer.md  script-editor.md  showrunner.md  structuralist.md  theme-specialist.md  world-researcher.md  worldbuilder.md
contracts/: chapter-contract.yaml  character-contract.yaml  conflict-contract.yaml  critique-contract.yaml  discourse-contract.yaml  episode-contract.yaml  object-of-value-contract.yaml  scene-contract.yaml  story-contract.yaml  theme-contract.yaml
docs/: agents-overview.md  glossary.md  index.md  operating-principles.md  pipeline-map.md  system-overview.md  theory-notes.md  types-maps.md  usage.md
research/: agent-quality-scores.md  character-layers.md  cliche-definition.md  conflict-types.md  emotion-model.md  genre-map.md  genre-taxonomy.md  motivation-stack.md  quality-audit-framework.md  quality-principles.md  selection-logic.md  sequence-types.md  staff-roles.md  story-components.md  theme-ontology.md  tone-style-maps.md  (+1 more)
(+526 files in other folders)
