[project]
name = "narrative-engine"
version = "0.1.0"
description = "A structured, literature-grounded framework for generative narrative production"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.5",
]
llm = [
    "openai>=1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.11"
strict = true
disallow_untyped_defs = true

[tool.ruff]
target-version = "py311"
line-length = 100

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"
